css/photographer.css
#main {
    margin: 0 100px;
    max-width: 1440px;
    position: relative;
}

#contact_modal {
    display: none;
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 0.8);
    z-index: 5;
}

#gallery-container {
    display: flex;
    flex-direction: column;
    margin: 0 100px;
    max-width: 1440px;
}

.photograph-header {
    background-color: #FAFAFA;
    height: 300px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
    padding: 0 50px;
    margin-bottom: 20px;
}

.photograph-header .infos {
    display: flex;
    flex-direction: column;
    width: 470px;
}

.photograph-header img {
    height: 200px;
    width: 200px;
    background: #C4C4C4;
    border-radius: 50%;
    object-fit: cover;
    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
    margin-left: 270px;
}

.infos {
    width: 425px;
}

.infos-name {
    width: 100%;
}

.infos-name h1 {
    font-style: normal;
    font-weight: 400;
    font-size: 64px;
    line-height: 83px;
    color: #D3573C;
    margin: 0;
}

.origin {
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #901C1C;
}

.tagline {
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 23px;
    color: #525252;
    margin-top: 19px;
}

.gallery-filter {
    display: flex;
    width: 270px;
    justify-content: flex-start;
    /* align-items: center; */
    margin-top: 20px;
}

#filter-label {
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 23px;
    display: flex;
    width: 108px;
}

.dropdown-filter {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-left: 25px;
    /* margin-top: 20px; */
}

#filter-button{
    background: #901C1C;
    display: flex;
    color: white;
    border: none;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
    font-weight: 700;
    font-size: 18px;
    line-height: 23px;
    padding: 15px;
    position: relative;
    width: 170px;
    height: 50px;
    /* margin-left: 25px; */
    cursor: pointer;
}

.menu-filtre {
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    /* display: none; */
    /* position: absolute;
    top: 100%;
    left: 0; */
    width: 170px;
    background: #901C1C;
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    /* margin-left: 25px; */
    z-index: 2;
}

.rateSort, .dateSort, .nameSort {
    display: flex;
    flex-direction: column;
    background: #901C1C;
    color: white;
    font-weight: 700;
    font-size: 18px;
    line-height: 23px;
    padding: 15px;
    /* width: 170px; */
}

.photograph-gallery {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    margin-top: 71px;
    justify-content: center;
    margin-bottom: 35px;
}

.photograph-gallery .article {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}

.media_figure {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.video_logo {
    display: flex;
    position: absolute;
    width: 5rem;
    z-index: 3;
    object-fit: cover;
}

.photograph-gallery article .single_media {
    display: flex;
    height: 300px;
    width: 350px;
    border-radius: 5px;
    object-fit: cover;
    object-position: 50% 20%;
    z-index: 2;
    cursor: pointer;
}

.photo_infos {
    display: flex;
    width: 350px;
    justify-content: space-between;
    align-items: baseline;
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #911C1C;
}

.photo_infos p {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    font-size: 22px;
    margin-top: 10px;
}

.photo_likes {
    display: flex;
    font-weight: 500;
    justify-content: space-between;
    align-items: baseline;
}

#totalLikes {
    margin-right: 5px;
}

.red-like {
    margin-left: 7px;
    cursor: pointer;
}

.isLiked {
    transform: scale(1.30, 1.30);
}

.ratePriceLabel {
    position: fixed;
    display: flex;
    justify-content: space-around;
    align-items: center;
    width: 376px;
    height: 80px;
    background: #DB8876;
    border-radius: 5px;
    color: black;
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    line-height: 31px;
    right: 36px;
    bottom: -11px;
    z-index: 5;
}

.contact_button {
    font-size: 20px;
    font-weight: 700;
    color: white;
    padding: 11px;
    width: 170px;
    height: 70px;
    border: none;
    background-color: #901C1C;
    border-radius: 5px;
    cursor: pointer;
}

.modal {
    border-radius: 5px;
    background-color: #DB8876;
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    padding: 35px;
    margin: auto;
}

.modal header {
    justify-content: space-between;
    width: 100%;
}

.modal header img {
    cursor: pointer;
    margin-left: 135px;
}

.modal header h1,
.namePhotographForm {
    color: black;
    font-size: 3.5rem;
    font-weight: normal;
    text-align: center;
    margin: 0;
}

.formTitle {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

form {
    display: flex;
    width: 100%;
    flex-direction: column;
    align-items: flex-start;
    margin-top: 80px;
}

form label {
    color: #312E2E;
    font-size: 36px;
    margin-top: 5px;
    margin-bottom: 5px
}

form div {
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: self-start;
    margin-bottom: 26px;
}

form input {
    width: 100%;
    height: 68px;
    border: none;
    border-radius: 5px;
    font-size: 1.5rem;
    padding: 0 0.5rem;
}

form .messageBox {
    width: 100%;
    height: 170px;
    border-radius: 5px;
    font-size: 1.5rem;
    padding: 0 0.5rem;
}

/* style de la lightbox */

#lightbox_modal {
    display: none;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, 1);
    z-index: 9;
}

#lightbox-prev,
#lightbox-next {
    position: absolute;
    width: 30px;
    height: 48px;
    cursor: pointer;
    z-index: 10;
}

#lightbox-prev {
    left: 3%;
    top: 50%;
}

#lightbox-next {
    left: 95%;
    top: 50%;
}

#lightbox-close {
    width: 42px;
    height: 42px;
    position: absolute;
    left: 94%;
    top: 6%;
    z-index: 10;
    text-decoration: none;
    cursor: pointer;
}

.media-container {
    display: flex;
    position: relative;
}

.media_name_container {
    width: 1253px;
    height: 984px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#lightbox-media {
    display: flex;
}

#media-name {
    position: absolute;
    top: 96%;
    /* height: 31px; */
    font-style: normal;
    font-weight: 400;
    font-size: 24px;
    line-height: 31px;
    color: #911C1C;
}

.lightboxMediaToShow {
    width: 1050px;
    height: 900px;
    border-radius: 5px;
    object-fit: cover;
    object-position: 50% 50%;
}

